@@ -1,12 +1,13 @@
 package org.ignast.stockinvesting.api.controller;
 
+import lombok.val;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.linkTo;
 import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.methodOn;
@@ -16,9 +17,9 @@ public final class RootController {
 
     @GetMapping(value = "/", produces = VersionedApiMediaTypes.V1)
     public HttpEntity<Root> getRoot() {
-        Root root = new Root();
+        final val root = new Root();
         root.add(linkTo(methodOn(CompanyController.class).defineCompany(new CompanyDTO("someId","Amazon", "Romania",
-                "United States Dollar", Arrays.asList(new ListingDTO("New York Stock Exchange", "Amazon")))))
+                "United States Dollar", List.of(new ListingDTO("New York Stock Exchange", "Amazon")))))
                         .withRel("stocks:company"));
         return new ResponseEntity<>(root, HttpStatus.OK);
     }
